--- a/src/assets/scss/hope-ui-design-system/_variable.scss
+++ b/src/assets/scss/hope-ui-design-system/_variable.scss
@@ -285,7 +285,7 @@ $position-values: (
 // Settings for the `<body>` element.
 
 $body-bg:                   #F5F6FA !default;
-$body-color:                #8A92A6 !default;
+$body-color:                #000 !default;
 $body-text-align:           null !default;
 
 
@@ -375,7 +375,7 @@ $border-widths: (
   5: 5px
 ) !default;
 
-$border-color:                #eee !default;
+$border-color:                #bbb !default;
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
